// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<MessageText /> > should render with a custom inner class when one is set 1`] = `
<div>
  <div
    class="str-chat__message str-chat__message--regular str-chat__message--received str-chat__message--has-text str-chat__message--other"
  >
    <div
      class="str-chat__message-inner"
      data-testid="message-inner"
    >
      <div
        data-testid="mocked-message-actions"
      />
      <div
        class="str-chat__message-bubble"
      >
        <div
          class="str-chat__message-text"
          tabindex="0"
        >
          <div
            class=""
            data-testid="message-text-inner-wrapper"
          >
            <div>
              <p>
                hi mate
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="str-chat__message-reactions-host"
      />
      <div
        class="str-chat__message-error-indicator"
      >
        <div
          class="str-chat__badge str-chat__badge--variant-error str-chat__badge--size-sm"
        >
          <svg
            class="str-chat__icon str-chat__icon--exclamation-mark-fill"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 13.5C8.55228 13.5 9 13.0523 9 12.5C9 11.9477 8.55228 11.5 8 11.5C7.44772 11.5 7 11.9477 7 12.5C7 13.0523 7.44772 13.5 8 13.5Z"
            />
            <path
              d="M7.25 9.5V3C7.25 2.58579 7.58579 2.25 8 2.25C8.41421 2.25 8.75 2.58579 8.75 3V9.5C8.75 9.91421 8.41421 10.25 8 10.25C7.58579 10.25 7.25 9.91421 7.25 9.5Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="str-chat__message-metadata"
    />
  </div>
</div>
`;

exports[`<MessageText /> > should render with a custom wrapper class when one is set 1`] = `
<div>
  <div
    class="str-chat__message str-chat__message--regular str-chat__message--received str-chat__message--has-text str-chat__message--other"
  >
    <div
      class="str-chat__message-inner"
      data-testid="message-inner"
    >
      <div
        data-testid="mocked-message-actions"
      />
      <div
        class="str-chat__message-bubble"
      >
        <div
          class="str-chat__message-text"
          tabindex="0"
        >
          <div
            class=""
            data-testid="message-text-inner-wrapper"
          >
            <div>
              <p>
                hello world
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="str-chat__message-reactions-host"
      />
      <div
        class="str-chat__message-error-indicator"
      >
        <div
          class="str-chat__badge str-chat__badge--variant-error str-chat__badge--size-sm"
        >
          <svg
            class="str-chat__icon str-chat__icon--exclamation-mark-fill"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 13.5C8.55228 13.5 9 13.0523 9 12.5C9 11.9477 8.55228 11.5 8 11.5C7.44772 11.5 7 11.9477 7 12.5C7 13.0523 7.44772 13.5 8 13.5Z"
            />
            <path
              d="M7.25 9.5V3C7.25 2.58579 7.58579 2.25 8 2.25C8.41421 2.25 8.75 2.58579 8.75 3V9.5C8.75 9.91421 8.41421 10.25 8 10.25C7.58579 10.25 7.25 9.91421 7.25 9.5Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="str-chat__message-metadata"
    />
  </div>
</div>
`;

exports[`<MessageText /> > should render with custom theme identifier in generated css classes when theme is set 1`] = `
<div>
  <div
    class="str-chat__message str-chat__message--regular str-chat__message--received str-chat__message--has-text str-chat__message--other"
  >
    <div
      class="str-chat__message-inner"
      data-testid="message-inner"
    >
      <div
        data-testid="mocked-message-actions"
      />
      <div
        class="str-chat__message-bubble"
      >
        <div
          class="str-chat__message-text"
          tabindex="0"
        >
          <div
            class=""
            data-testid="message-text-inner-wrapper"
          >
            <div>
              <p>
                whatup?!
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="str-chat__message-reactions-host"
      />
      <div
        class="str-chat__message-error-indicator"
      >
        <div
          class="str-chat__badge str-chat__badge--variant-error str-chat__badge--size-sm"
        >
          <svg
            class="str-chat__icon str-chat__icon--exclamation-mark-fill"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 13.5C8.55228 13.5 9 13.0523 9 12.5C9 11.9477 8.55228 11.5 8 11.5C7.44772 11.5 7 11.9477 7 12.5C7 13.0523 7.44772 13.5 8 13.5Z"
            />
            <path
              d="M7.25 9.5V3C7.25 2.58579 7.58579 2.25 8 2.25C8.41421 2.25 8.75 2.58579 8.75 3V9.5C8.75 9.91421 8.41421 10.25 8 10.25C7.58579 10.25 7.25 9.91421 7.25 9.5Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      class="str-chat__message-metadata"
    />
  </div>
</div>
`;
